--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <script>
-  window.location.href="http://w-anlger.com"
+  window.location.href="https://w-angler.com"
   </script>
 </head>
 <body></body>
